@@ -1,3 +1,9 @@
+2012-03-13  Frank Warmerdam  <warmerdam@google.com>
+
+	* src/projects.h, src/pj_list.c: avoid using #include directly on a
+	macro expansion - it is unnecessary and makes for problems in my work
+	environment.
+
 2012-03-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Preparing 4.8.0 release candidate.
